fix: alignment issue in profile-info

--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,6 @@ ul {
 
 .profile-info {
   display: flex;
-  align-items: center;
   line-height: 0;
 }
 
